--- a/baseline_trials/Introduction.html
+++ b/baseline_trials/Introduction.html
@@ -30,8 +30,19 @@ Study overview and bonus points
     <p>
 </div>
 
+<!--    <div style="display: flex; justify-content: flex-end">-->
+<!--      {% next_button %}-->
+<!--    </div>-->
     <div style="display: flex; justify-content: flex-end">
-      {% next_button %}
+            <button style="
+                        color: #fff;
+                        background-color: #007bff;
+                        border: 1px solid #007bff;
+                        font-size: 1rem;
+                        border-radius: 0.25rem;">
+
+            START
+        </button>
     </div>
 
 
