--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -1096,7 +1096,7 @@
 
             {% if "country" in player.treatment or "IN" in player.treatment or "OUT" in player.treatment%}
                 <p style="font-size: 14px;">
-                    Person A lives in {{ dic_identity_country }} and Person B lives in {{ recip_identity_country }}.
+                    Person A lives in <b style="color: red;">{{ dic_identity_country }}</b> and Person B lives in <b style="color: red;">{{ recip_identity_country }}</b>.
                 </p>
             {% endif %}
 
@@ -1106,7 +1106,7 @@
             </p>
 
             <p>
-                <strong>How <b style="color: red;">socially appropriate</b> is it {{treatment_text_action_person}} to
+                <strong>How socially appropriate is it for {{treatment_text_action_person}} to
                 <b style="color: red;">{{ treatment_text_action }} points</b> {{ treatment_text_receiver }}?</strong>
             </p>
 
@@ -1123,9 +1123,14 @@
 
             {% if "punish" in player.treatment or "reward" in player.treatment %}
             <br>
+
+             <p style="text-align: center; ">
+                <b >AND</b>
+            </p>
+
             <p>
-                <strong>How <b style="color: red;">socially appropriate</b> is it {{treatment_text_action_person}} to
-                <b style="color: red;"> <u>not</u> {{ treatment_text_action }} points</b> {{ treatment_text_receiver }}?</strong>
+                <strong>How socially appropriate is it for {{treatment_text_action_person}} to
+                <b style="color: red;"> <u>NOT</u> {{ treatment_text_action }} points</b> {{ treatment_text_receiver }}?</strong>
             </p>
 
             <div class='numbers'>
@@ -1274,13 +1279,13 @@
             </div>
 
                 {% if "country" in player.treatment or "IN" in player.treatment or "OUT" in player.treatment%}
-                    <p style="font-size: 14px;"> Person A lives in {{ dic_identity_country }} and Person B lives in {{ recip_identity_country }}. </p>
+                    <p style="font-size: 14px;"> Person A lives in <b style="color: red;">{{ dic_identity_country }}</b> and Person B lives in <b style="color: red;">{{ recip_identity_country }}</b>. </p>
                 {% endif %}
 
-                <p style="font-size: 14px;"> Person A gave <strong> {{TP_decision.receiver}} </strong> point(s) to Person B and kept <strong> {{TP_decision.dictator_keeps}} </strong> point(s) for themselves. </p>
+                <p style="font-size: 14px;"> Person A gave <strong> {{TP_decision.receiver}} </strong> point(s) to {{treatment_text_action_person2}} and kept <strong> {{TP_decision.dictator_keeps}} </strong> point(s) for themselves. </p>
 
                 <div class='numbers'>
-                    <p> <strong>How many points do you <b style="color: red;"> {{ treatment_text_action }} </b>  {{ treatment_text_receiver }}? </strong> </p>
+                    <p>  <strong>As {{treatment_text_action_person}}, how many points do you <b style="color: red;"> {{ treatment_text_action }} </b>  {{ treatment_text_receiver }}? </strong> </p>
 
                     <div class="number-row" data-index="{{ TP_decision.index }}" data-row="punish" data-input="selected-number-{{ TP_decision.index }}">
                         {{ for num in TP_points }}
@@ -1289,10 +1294,11 @@
                     </div>
                     {% if "3PC" in player.treatment%}
                     <br>
-                    <div>
-                        <b>OR</b>
-                    </div>
-                    <br>
+
+                    <p style="text-align: center; ">
+                        <b style="color: red; ">OR</b>
+                    </p>
+
                     <p> <strong>How many points do you <b style="color: red;"> {{ treatment_text_action_comp }} </b>  {{ treatment_text_receiver_comp }}? </strong> </p>
 
                     <div class="number-row-comp" data-index="{{ TP_decision.index }}" data-row="compensate" data-input="selected-number-{{ TP_decision.index }}">
